<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AiMax"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101C15"
    tools:context=".AI">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/board"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:soundEffectsEnabled="false"
            android:text="@string/Score"
            android:textColor="#FFFFFF"
            android:textSize="54sp"
            android:textStyle="bold">

        </TextView>


        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleScore">

            <LinearLayout
                android:id="@+id/Score1"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Score1Player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ai"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/Score1Val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr"
                    android:textColor="#FFD400"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Score2Player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/You"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/Score2Val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scr"
                    android:textColor="#FFD400"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

    <GridLayout
        android:id="@+id/board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="3"
        android:rowCount="3">

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="#F8FFA6"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick"
            android:text="@string/b1"
            android:textColor="#F7FEA5"
            android:textSize="60sp"
            app:cornerRadius="5dp"
            tools:ignore="SmallSp,SpeakableTextPresentCheck,TextContrastCheck,TextSizeCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="#F8FFA6"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick"
            android:text="@string/b2"
            android:textColor="#F7FEA5"
            android:textSize="60sp"
            app:cornerRadius="5dp"
            tools:ignore="SmallSp,SpeakableTextPresentCheck,TextContrastCheck,TextSizeCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="#F8FFA6"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick"
            android:text="@string/b3"
            android:textColor="#F7FEA5"
            android:textSize="60sp"
            app:cornerRadius="5dp"
            tools:ignore="SmallSp,SpeakableTextPresentCheck,TextContrastCheck,TextSizeCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="#F8FFA6"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick"
            android:text="@string/b4"
            android:textColor="#F7FEA5"
            android:textSize="60sp"
            app:cornerRadius="5dp"
            tools:ignore="SmallSp,SpeakableTextPresentCheck,TextContrastCheck,TextSizeCheck" />

        <Button
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="#F8FFA6"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick"
            android:text="@string/b5"
            android:textColor="#F7FEA5"
            android:textSize="60sp"
            app:cornerRadius="5dp"
            tools:ignore="SmallSp,SpeakableTextPresentCheck,TextContrastCheck,TextSizeCheck" />

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="#F8FFA6"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick"
            android:text="@string/b6"
            android:textColor="#F7FEA5"
            android:textSize="60sp"
            app:cornerRadius="5dp"
            tools:ignore="SmallSp,SpeakableTextPresentCheck,TextContrastCheck,TextSizeCheck" />

        <Button
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="#F8FFA6"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick"
            android:text="@string/b7"
            android:textColor="#F7FEA5"
            android:textSize="60sp"
            app:cornerRadius="5dp"
            tools:ignore="SmallSp,SpeakableTextPresentCheck,TextContrastCheck,TextSizeCheck" />

        <Button
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="#F8FFA6"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick"
            android:text="@string/b8"
            android:textColor="#F7FEA5"
            android:textSize="60sp"
            app:cornerRadius="5dp"
            tools:ignore="SmallSp,SpeakableTextPresentCheck,TextContrastCheck,TextSizeCheck" />

        <Button
            android:id="@+id/button9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="#F8FFA6"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick"
            android:text="@string/b9"
            android:textColor="#F7FEA5"
            android:textSize="60sp"
            app:cornerRadius="5dp"
            tools:ignore="SmallSp,SpeakableTextPresentCheck,TextContrastCheck,TextSizeCheck" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/board"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp">

        <Button
            android:id="@+id/retry"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#ED5A40"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onRetryClick"
            android:text="@string/lastBtn"
            android:textAllCaps="true"
            android:textColor="#FFFDFD"
            android:textSize="25sp"
            app:cornerRadius="13dp"
            tools:ignore="InefficientWeight" />
    </LinearLayout>

</RelativeLayout>