<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_screen"

    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/opt"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title1"
            android:textColor="#470000"
            android:textSize="42sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/opt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:layout_weight="0"
            android:text="@string/options"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAi"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_weight="0"
            android:backgroundTint="#043B60"
            android:gravity="center"
            android:text="@string/opt1"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            app:cornerRadius="12dp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btnFriend"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_weight="0"
            android:backgroundTint="#043B60"
            android:text="@string/opt2"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            app:cornerRadius="12dp" />
        <Button
            android:id="@+id/btnRealPlayer"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_weight="0"
            android:backgroundTint="#043B60"
            android:text="@string/real_player"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            app:cornerRadius="12dp" />


    </LinearLayout>
</RelativeLayout>